# MultimodalYouTube

./: .env-example  .gitignore  README.md  main.py  pyproject.toml
ai/: prompts.py  video_extraction.py  video_extraction_model.py
app/: logging.py  routes.py  settings.py
tests/: test_ai_video_extraction.py  test_app_routes.py
