[project]
name = "multimodal-extract"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "ffmpeg-python>=0.2.0",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-google-genai>=2.1.5",
    "loguru>=0.7.3",
    "pydantic-settings>=2.9.1",
    "pytest>=8.3.5",
    "pytubefix>=9.1.1",
    "throttled>=0.2.1",
    "torch>=2.7.0",
    "transformers>=4.52.3",
    "uvicorn>=0.34.2",
]
